# ted

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN-shared-workspace.md  LICENSE  Makefile.toml  PLAN-self-contained-ted.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md  TEDDY_IMPLEMENTATION_SUMMARY.md  deny.toml  install.ps1  install.sh  mcp-config.json
.beads/: beads.jsonl
.claude/: security-assessment-2024-01.md
.github/workflows/: ci.yml  release.yml  security.yml  teddy-release.yml
docs/: AGENT_EXECUTION_ARCHITECTURE.md  ARCHITECTURE.md  CHAT_TUI_DESIGN.md  GAP_CLOSURE_EXECUTION_PLAN.md  IMPROVEMENTS.md  MCP.md  MCP_SETUP.md  OBSERVABILITY.md  PERMISSIONS_POLICY_V2.md  RASPBERRY_PI_PROTOTYPE.md  RELEASE_CHECKLIST.md  UNWRAP_AUDIT.md
registry/: binaries.json  models.json
scripts/: add-license-headers.sh  perf-smoke.sh  pi-prototype.sh  release-smoke.sh  toolcall-matrix.sh
src/: embedded_runner.rs  error.rs  lib.rs  main.rs  update.rs  utils.rs
src/agents/: builtin.rs  context.rs  memory.rs  mod.rs  runner.rs  types.rs
src/audit/: mod.rs
src/beads/: mod.rs  schema.rs  storage.rs
src/caps/: loader.rs  mod.rs  render.rs  (+2 more)
teddy/: .eslintrc.cjs  .gitignore  ARCHITECTURE.md  BUILD_ARM64.md  BUNDLED_DEPENDENCIES.md  COMMANDS.md  MVP_LIMITATIONS.md  QUICKSTART.md  README.md  README_ARM64.md  TROUBLESHOOTING.md  electron.vite.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.test.json
teddy-rocks-worker/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
tests/: cli_tests.rs  config_tests.rs  error_tests.rs  integration_flow_tests.rs  llm_tests.rs  tool_tests.rs  tui_integration_tests.rs
vscode-extension/: README.md  package.json  pnpm-lock.yaml
(+226 files in other folders)
